--- a/SocialMediaApp/app/build.gradle
+++ b/SocialMediaApp/app/build.gradle
@@ -29,12 +29,13 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:cardview-v7:27.1.1'
     compile 'com.android.support:recyclerview-v7:27.1.1'
+    compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.amitshekhar.android:android-networking:1.0.0'
-
+    compile 'com.theartofdev.edmodo:android-image-cropper:2.4.7'
     compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
