--- a/SocialMediaApp/app/src/main/AndroidManifest.xml
+++ b/SocialMediaApp/app/src/main/AndroidManifest.xml
@@ -54,11 +54,7 @@
         <activity
             android:name=".profile.SplashScreen"
             android:screenOrientation="portrait">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".profile.GetOtp"
@@ -77,7 +73,13 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".profile.UserProfile"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
         <activity
             android:name=".sidebar.ChangePassword"
             android:screenOrientation="portrait" />
