--- a/SocialMediaApp/app/src/main/AndroidManifest.xml
+++ b/SocialMediaApp/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -54,7 +54,11 @@
         <activity
             android:name=".profile.SplashScreen"
             android:screenOrientation="portrait">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".profile.GetOtp"
@@ -73,13 +77,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".profile.UserProfile"
-            android:screenOrientation="portrait" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-        </activity>
+            android:screenOrientation="portrait"></activity>
         <activity
             android:name=".sidebar.ChangePassword"
             android:screenOrientation="portrait" />
@@ -115,7 +113,8 @@
         <activity android:name=".Home.OtherUserProfile" />
         <activity android:name=".Home.BottomNavigationPostActivity" />
         <activity android:name=".Home.OpenImageActivity" />
-        <activity android:name=".Home.SearchActivity"></activity>
+        <activity android:name=".Home.SearchActivity" />
+        <activity android:name=".facebookplayer.VideoPlaying"></activity>
     </application>
 
 </manifest>
