--- a/SocialMediaApp/app/build.gradle
+++ b/SocialMediaApp/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.amitshekhar.android:android-networking:1.0.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.4.7'
+    compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.google.android.exoplayer:exoplayer:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-core:r2.4.0'
     compile 'com.google.android.exoplayer:exoplayer-dash:r2.4.0'
