--- a/SocialMediaApp/app/build.gradle
+++ b/SocialMediaApp/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer-ui:r2.4.0'
     compile 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'org.lucasr.twowayview:twowayview:0.1.4'
 
     compile 'uk.co.jakelee:vidsta:1.0.0'
     compile 'net.the4thdimension:audio-wife:1.0.3'
